--- a/w001/styles.css
+++ b/w001/styles.css
@@ -1,7 +1,7 @@
 /* Temel sayfa düzeni */
 body {
   font-family: Arial, sans-serif;
-  line-height: 1.6;
+  line-height: 2;
   background-color: #f4f4f4;
   margin: 0;
   padding: 0;
@@ -31,7 +31,7 @@ h6 {
 
 /* Paragraflar için düzenleme */
 p {
-  margin: 10px 0;
+  margin: 15px 0;
   color: #555;
 }
 
@@ -54,7 +54,13 @@ ol {
 
 /* Kod blokları */
 pre {
-  background-color: #f5f5f5;
+  height: 60vm;
+  margin: 20px 0;
+  white-space: pre-wrap;
+  font-weight: bold;
+  color: #ddd;
+  font-size: 400;
+  background-color: #1591be;
   padding: 10px;
   border-radius: 4px;
   overflow-x: auto;
@@ -62,7 +68,7 @@ pre {
 
 code {
   font-family: "Courier New", Courier, monospace;
-  background-color: #f5f5f5;
+  background-color: #1591be;
   padding: 2px 4px;
   border-radius: 4px;
 }
